Added support for WordPress plugin theplus_elementor_addon

--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3255,3 +3255,11 @@ WordPress plugin food-and-drink-menu:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-29045 https://appcheck-ng.com/cve-2020-29045/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin theplus_elementor_addon:
+  1:
+    location: ['/wp-content/plugins/theplus_elementor_addon/readme.txt']
+    secure_version: '4.1.7'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-24175 https://www.wordfence.com/blog/2021/03/critical-0-day-in-the-plus-addons-for-elementor-allows-site-takeover/ https://threatpost.com/cyberattackers-exploiting-critical-wordpress-plugin-bug/164663/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
