--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3271,3 +3271,11 @@ WordPress plugin sb-elementor-contact-form-db:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-3133 https://plugins.trac.wordpress.org/changeset/2454670/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin tutor:
+  1:
+    location: ['/wp-content/plugins/tutor/readme.txt']
+    secure_version: '1.7.7'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2021/03/several-vulnerabilities-patched-in-tutor-lms-plugin/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
