--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3279,3 +3279,11 @@ WordPress plugin tutor:
     cve: 'https://www.wordfence.com/blog/2021/03/several-vulnerabilities-patched-in-tutor-lms-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin elementor:
+  1:
+    location: ['/wp-content/plugins/elementor/readme.txt']
+    secure_version: '3.1.4'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2021/03/cross-site-scripting-vulnerabilities-in-elementor-impact-over-7-million-sites/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested.
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
