--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3295,3 +3295,11 @@ WordPress plugin official-facebook-pixel:
     cve: 'https://www.wordfence.com/blog/2021/03/two-vulnerabilities-patched-in-facebook-for-wordpress-plugin/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested.
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wp-pagebuilder:
+  1:
+    location: ['/wp-content/plugins/wp-pagebuilder/readme.txt']
+    secure_version: '1.2.4'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-24207 https://nvd.nist.gov/vuln/detail/CVE-2021-24208 https://www.wordfence.com/blog/2021/04/vulnerabilities-patched-in-wp-page-builder/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
