--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -261,19 +261,20 @@
 # CVE-2020-4050 5.4.2 https://wordpress.org/news/2020/06/wordpress-5-4-2-security-and-maintenance-release/ https://core.trac.wordpress.org/changeset/47951 https://github.com/WordPress/wordpress-develop/security/advisories/GHSA-4vpv-fgg2-gcqc https://github.com/WordPress/wordpress-develop/commit/b8dea76b495f0072523106c6ec46b9ea0d2a0920
 # CVE-2020-35539 TODO https://lists.openwall.net/full-disclosure/2021/03/11/2
 # TODO 5.5.2 https://wordpress.org/news/2020/10/wordpress-5-5-2-security-and-maintenance-release/
-# TODO 5.7.1 https://wordpress.org/news/2021/04/wordpress-5-7-1-security-and-maintenance-release/
+# CVE-2021-29447 5.7.1 https://github.com/WordPress/wordpress-develop/security/advisories/GHSA-rv47-pc52-qrhh https://wordpress.org/news/2021/04/wordpress-5-7-1-security-and-maintenance-release/
+# CVE-2021-29450 5.7.1 https://github.com/WordPress/wordpress-develop/security/advisories/GHSA-pmmh-2f36-wvhq https://wordpress.org/news/2021/04/wordpress-5-7-1-security-and-maintenance-release/
 WordPress:
   1:
     location: ['/wp-includes/version.php', '/wp-includes/vars.php']
     secure_version: '5.7.1'
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2021/04/wordpress-5-7-1-security-and-maintenance-release/'
+    cve: 'https://wordpress.org/news/2021/04/wordpress-5-7-1-security-and-maintenance-release/ https://nvd.nist.gov/vuln/detail/CVE-2021-29447 https://nvd.nist.gov/vuln/detail/CVE-2021-29450'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
   2:
     location: ['/b2-include/b2vars.php']
     secure_version: '5.7.1'
     regexp: ['\$b2_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2021/04/wordpress-5-7-1-security-and-maintenance-release/'
+    cve: 'https://wordpress.org/news/2021/04/wordpress-5-7-1-security-and-maintenance-release/ https://nvd.nist.gov/vuln/detail/CVE-2021-29447 https://nvd.nist.gov/vuln/detail/CVE-2021-29450'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
