--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3320,3 +3320,11 @@ WordPress plugin cleantalk-spam-protect:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-24295 https://www.wordfence.com/blog/2021/05/sql-injection-vulnerability-patched-in-cleantalk-antispam-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin metronet-profile-picture:
+  1:
+    location: ['/wp-content/plugins/metronet-profile-picture/readme.txt']
+    secure_version: '2.5.0'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-24170 https://www.wordfence.com/blog/2021/03/medium-severity-vulnerability-patched-in-user-profile-picture-plugin/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
