--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3345,3 +3345,11 @@ WordPress plugin accordions:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-13644 https://www.wordfence.com/blog/2020/04/vulnerability-patched-in-accordion-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin tc-custom-javascript:
+  1:
+    location: ['/wp-content/plugins/tc-custom-javascript/readme.txt']
+    secure_version: '1.2.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-14063 https://www.wordfence.com/blog/2020/07/high-severity-vulnerability-patched-in-tc-custom-javascript/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
