--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3354,3 +3354,11 @@ WordPress plugin tc-custom-javascript:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-14063 https://www.wordfence.com/blog/2020/07/high-severity-vulnerability-patched-in-tc-custom-javascript/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin simple-301-redirects:
+  1:
+    location: ['/wp-content/plugins/simple-301-redirects/readme.txt']
+    secure_version: '2.0.4'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-24352 https://nvd.nist.gov/vuln/detail/CVE-2021-24353 https://www.wordfence.com/blog/2021/05/severe-vulnerabilities-patched-in-simple-301-redirects-by-betterlinks-plugin/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
