--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3371,3 +3371,11 @@ WordPress plugin fancy-product-designer:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-24370 https://www.wordfence.com/blog/2021/06/critical-0-day-in-fancy-product-designer-under-active-attack/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin email-subscribers:
+  1:
+    location: ['/wp-content/plugins/email-subscribers/readme.txt']
+    secure_version: '4.2.3'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-19980 https://nvd.nist.gov/vuln/detail/CVE-2019-19981 https://nvd.nist.gov/vuln/detail/CVE-2019-19982 https://nvd.nist.gov/vuln/detail/CVE-2019-19984 https://nvd.nist.gov/vuln/detail/CVE-2019-19985 https://www.wordfence.com/blog/2019/11/multiple-vulnerabilities-patched-in-email-subscribers-newsletters-plugin/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
