--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3368,7 +3368,7 @@ WordPress plugin fancy-product-designer:
     location: ['/wp-content/plugins/fancy-product-designer/readme.txt']
     secure_version: '4.6.9'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-24370 https://www.wordfence.com/blog/2021/06/critical-0-day-in-fancy-product-designer-under-active-attack/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-24370 https://www.wordfence.com/blog/2021/06/critical-0-day-in-fancy-product-designer-under-active-attack/ https://www.bleepingcomputer.com/news/security/critical-wordpress-plugin-zero-day-under-active-exploitation/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin email-subscribers:
