--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3396,3 +3396,11 @@ WordPress plugin fluentform:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-34620 https://www.wordfence.com/blog/2021/06/cross-site-request-forgery-patched-in-wp-fluent-forms/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin woocommerce-stock-manager:
+  1:
+    location: ['/wp-content/plugins/woocommerce-stock-manager/readme.txt']
+    secure_version: '2.6.0'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-34619 https://www.wordfence.com/blog/2021/06/high-severity-vulnerability-patched-in-woocommerce-stock-manager-plugin/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
