--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3412,3 +3412,11 @@ WordPress plugin external-media:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-24311 https://www.wordfence.com/blog/2021/05/critical-vulnerability-patched-in-external-media-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin bft-autoresponder:
+  1:
+    location: ['/wp-content/plugins/bft-autoresponder/readme.txt']
+    secure_version: '2.5.1.5'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-1002000 https://nvd.nist.gov/vuln/detail/CVE-2018-1002001 https://nvd.nist.gov/vuln/detail/CVE-2018-1002002 https://nvd.nist.gov/vuln/detail/CVE-2018-1002003 https://nvd.nist.gov/vuln/detail/CVE-2018-1002004 https://nvd.nist.gov/vuln/detail/CVE-2018-1002005 https://nvd.nist.gov/vuln/detail/CVE-2018-1002006 https://nvd.nist.gov/vuln/detail/CVE-2018-1002007 https://nvd.nist.gov/vuln/detail/CVE-2018-1002008 https://nvd.nist.gov/vuln/detail/CVE-2018-1002009 http://www.vapidlabs.com/advisory.php?v=203 https://www.openwall.com/lists/oss-security/2018/09/11/2'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
