--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3421,3 +3421,11 @@ WordPress plugin bft-autoresponder:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-1002000 https://nvd.nist.gov/vuln/detail/CVE-2018-1002001 https://nvd.nist.gov/vuln/detail/CVE-2018-1002002 https://nvd.nist.gov/vuln/detail/CVE-2018-1002003 https://nvd.nist.gov/vuln/detail/CVE-2018-1002004 https://nvd.nist.gov/vuln/detail/CVE-2018-1002005 https://nvd.nist.gov/vuln/detail/CVE-2018-1002006 https://nvd.nist.gov/vuln/detail/CVE-2018-1002007 https://nvd.nist.gov/vuln/detail/CVE-2018-1002008 https://nvd.nist.gov/vuln/detail/CVE-2018-1002009 http://www.vapidlabs.com/advisory.php?v=203 https://www.openwall.com/lists/oss-security/2018/09/11/2'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin directories-pro:
+  1:
+    location: ['/wp-content/plugins/directories-pro/readme.txt']
+    secure_version: '1.3.46'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-29303 https://nvd.nist.gov/vuln/detail/CVE-2020-29304'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
