--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3440,3 +3440,11 @@ WordPress plugin wp-levoslideshow:
     cve: 'https://en.0day.today/exploit/20250 https://lists.openwall.net/full-disclosure/2016/06/07/2'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin envira-gallery-lite:
+  1:
+    location: ['/wp-content/plugins/envira-gallery-lite/readme.txt']
+    secure_version: '1.8.3.3'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-35581 https://nvd.nist.gov/vuln/detail/CVE-2020-35582 https://lists.openwall.net/full-disclosure/2021/01/13/3'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
