--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3450,3 +3450,11 @@ WordPress plugin envira-gallery-lite:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-35581 https://nvd.nist.gov/vuln/detail/CVE-2020-35582 https://lists.openwall.net/full-disclosure/2021/01/13/3'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wp-user-avatar:
+  1:
+    location: ['/wp-content/plugins/wp-user-avatar/readme.txt']
+    secure_version: '3.1.4'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2021-34621 https://nvd.nist.gov/vuln/detail/CVE-2021-34622 https://nvd.nist.gov/vuln/detail/CVE-2021-34623 https://nvd.nist.gov/vuln/detail/CVE-2021-34624 https://www.wordfence.com/blog/2021/06/easily-exploitable-critical-vulnerabilities-patched-in-profilepress-plugin/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
